// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelCellArrayReference > should render the component with className from inherited props 1`] = `
<DocumentFragment>
  <div
    class="dummy-class"
  >
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellArrayReference > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    -
  </div>
</DocumentFragment>
`;

exports[`ModelCellArrayReference > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellArrayReference > should render with an accessor function 1`] = `
<DocumentFragment>
  <div>
    function value, function value
  </div>
</DocumentFragment>
`;

exports[`ModelCellArrayReference > should render with an accessor string 1`] = `
<DocumentFragment>
  <div>
    foo value, bar value
  </div>
</DocumentFragment>
`;

exports[`ModelCellArrayReference > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellArrayReference > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellArrayReference > should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
